@@ -106,8 +106,8 @@ sub Spawn ()
     my $self = shift;
 
     if ($self->{RUNNING} == 1) {
-        print STDERR "ERROR: Cannot Spawn: <$self->{EXECUTABLE}> ",
-                     "already running\n";
+        print STDERR "ERROR: Cannot Spawn: <", $self->Executable (),
+                     "> already running\n";
         return -1;
     }
 
@@ -116,14 +116,18 @@ sub Spawn ()
 	    return -1;
     }
     
-    if (!-f $self->{EXECUTABLE}) {
-        print STDERR "ERROR: Cannot Spawn: $self->{EXECUTABLE} not found\n";
-	    return -1;
-    }
+    if (!$self->{IGNOREEXESUBDIR} {
+        if (!-f $self->Executable ()) {
+            print STDERR "ERROR: Cannot Spawn: <", $self->Executable (), 
+                         "> not found\n";
+            return -1;
+        }
 
-    if (!-x $self->{EXECUTABLE}) {
-        print STDERR "ERROR: Cannot Spawn: $self->{EXECUTABLE} not executable\n";
-	    return -1;
+        if (!-x $self->Executable ()) {
+            print STDERR "ERROR: Cannot Spawn: <", $self->Executable (), 
+                         "> not executable\n";
+            return -1;
+        }
     }
 
     Win32::Process::Create ($self->{PROCESS}, 
